@@ -1,7 +1,7 @@
 package com.redis.om.spring;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.springframework.boot.autoconfigure.AutoConfigurationImportFilter;
@@ -10,7 +10,7 @@ import org.springframework.boot.autoconfigure.AutoConfigurationMetadata;
 public class RedisRepositoriesExcludeFilter implements AutoConfigurationImportFilter {
 
   private static final Set<String> SHOULD_SKIP = new HashSet<>(
-      Arrays.asList("org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration"));
+      List.of("org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration"));
 
   @Override
   public boolean[] match(String[] autoConfigurationClasses, AutoConfigurationMetadata autoConfigurationMetadata) {
