@@ -1,24 +1,21 @@
 package com.redis.om.spring.search.stream.predicates.tag;
 
-import java.lang.reflect.Field;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import com.redis.om.spring.metamodel.SearchFieldAccessor;
 import com.redis.om.spring.repository.query.QueryUtils;
 import com.redis.om.spring.search.stream.predicates.BaseAbstractPredicate;
+import redis.clients.jedis.search.querybuilder.Node;
+import redis.clients.jedis.search.querybuilder.QueryBuilders;
+import redis.clients.jedis.search.querybuilder.QueryNode;
 
-import io.redisearch.querybuilder.Node;
-import io.redisearch.querybuilder.QueryBuilder;
-import io.redisearch.querybuilder.QueryNode;
+import java.util.List;
 
 public class ContainsAllPredicate<E, T> extends BaseAbstractPredicate<E, T> {
 
-  private List<String> values;
+  private final List<String> values;
 
   public ContainsAllPredicate(SearchFieldAccessor field, List<String> list) {
     super(field);
-    this.values = list.stream().map(QueryUtils::escape).collect(Collectors.toList());
+    this.values = list.stream().map(QueryUtils::escape).toList();
   }
 
   public List<String> getValues() {
@@ -27,11 +24,11 @@ public class ContainsAllPredicate<E, T> extends BaseAbstractPredicate<E, T> {
 
   @Override
   public Node apply(Node root) {
-    QueryNode and = QueryBuilder.intersect();
+    QueryNode and = QueryBuilders.intersect();
     for (String value : getValues()) {
       and.add(getSearchAlias(), "{" + value + "}");
     }
 
-    return QueryBuilder.intersect(root, and);
+    return QueryBuilders.intersect(root, and);
   }
 }
