@@ -1,18 +1,16 @@
 package com.redis.om.spring.search.stream.predicates.tag;
 
-import java.lang.reflect.Field;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import com.redis.om.spring.metamodel.SearchFieldAccessor;
 import com.redis.om.spring.repository.query.QueryUtils;
 import com.redis.om.spring.search.stream.predicates.BaseAbstractPredicate;
 
-import io.redisearch.querybuilder.Node;
-import io.redisearch.querybuilder.QueryBuilder;
-import io.redisearch.querybuilder.QueryNode;
-import io.redisearch.querybuilder.Values;
+import redis.clients.jedis.search.querybuilder.Node;
+import redis.clients.jedis.search.querybuilder.QueryBuilders;
+import redis.clients.jedis.search.querybuilder.QueryNode;
+import redis.clients.jedis.search.querybuilder.Values;
 
 public class NotEqualPredicate<E, T> extends BaseAbstractPredicate<E, T> {
   private T value;
@@ -25,7 +23,7 @@ public class NotEqualPredicate<E, T> extends BaseAbstractPredicate<E, T> {
 
   public NotEqualPredicate(SearchFieldAccessor field, List<String> list) {
     super(field);
-    this.values = list.stream().map(QueryUtils::escape).collect(Collectors.toList());
+    this.values = list.stream().map(QueryUtils::escape).toList();
   }
 
   public Iterable<?> getValues() {
@@ -34,13 +32,13 @@ public class NotEqualPredicate<E, T> extends BaseAbstractPredicate<E, T> {
 
   @Override
   public Node apply(Node root) {
-    QueryNode and = QueryBuilder.intersect();
+    QueryNode and = QueryBuilders.intersect();
 
     StreamSupport.stream(getValues().spliterator(), false) //
         .map(v -> Values.value("{" + v.toString() + "}"))
-        .forEach(value -> and.add(QueryBuilder.disjunct(getSearchAlias(), value)));
+        .forEach(value -> and.add(QueryBuilders.disjunct(getSearchAlias(), value)));
 
-    return QueryBuilder.intersect(root, and);
+    return QueryBuilders.intersect(root, and);
   }
 
 }
